Last update of the day. Closest variation yet.
Will come back maybe or just build a version 4 after some more practice

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="styles.css">
+        <link rel="stylesheet" href="https://db.onlinewebfonts.com/c/91bf51a8358ebe7c72e49ea84fd8db7f?family=Spotify+Mix+Extrabold"> 
     </head>
     <body>
+        <main>
     <div class="main-log-in-sheet">
         <div class="main-log-in-sheet" id="sign-up-card">        
      <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2023/05/Spotify_Primary_Logo_RGB_Green.png" alt="Green Spotify Logo" class="spotify-logo">
@@ -37,6 +39,7 @@
 </div>
 </div>
     </body>
+</main>
     <footer class="footer">
         <p>This site is protected by reCAPTCHA and the Google <a href="http://" target="_blank" rel="noopener noreferrer">Privacy Policy</a> and <a href="http://" target="_blank" rel="noopener noreferrer">Terms of service</a> apply.</p>
     </footer>
