I came back to tweak some things. Actually made it look better,
Created a responsive layout and added hover effects. centered everything.

--- a/index.html
+++ b/index.html
@@ -17,22 +17,16 @@
      <img src="https://storage.googleapis.com/pr-newsroom-wp/1/2023/05/Spotify_Primary_Logo_RGB_Green.png" alt="Green Spotify Logo" class="spotify-logo">
     
         <h1>Log in to Spotify</h1>
-        <div>
-            <ul>
-                <li>
-                    <button type="submit"><img src="https://i.redd.it/31jvnqfr9bsb1.png" alt="Google logo" srcset="" class="easy-log-in-buttons">Continue with Google</button>
-                </li>
-                <li>
-                    <button type="submit"><img src="https://images.vexels.com/media/users/3/137253/isolated/preview/90dd9f12fdd1eefb8c8976903944c026-facebook-icon-logo.png" alt="Facebook logo" srcset="" class="easy-log-in-buttons">Continue with Facebook</button>
-                 </li>
-                <li>
-                        <button type="submit"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Apple_logo_grey.svg/404px-Apple_logo_grey.svg.png" alt="Apple logo" srcset="" class="easy-log-in-buttons">Continue with Apple</button>
-                </li> 
-            </ul>
+        <div class="continue-buttons">
+             <button type="submit" class="easy-log-in-buttons"><img src="https://i.redd.it/31jvnqfr9bsb1.png" alt="Google logo" srcset="" class="logo-image">Continue with Google</button>
+             <button type="submit" class="easy-log-in-buttons"><img src="https://images.vexels.com/media/users/3/137253/isolated/preview/90dd9f12fdd1eefb8c8976903944c026-facebook-icon-logo.png" alt="Facebook logo" srcset="" class="logo-image">Continue with Facebook</button>
+             <button type="submit" class="easy-log-in-buttons"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/1b/Apple_logo_grey.svg/404px-Apple_logo_grey.svg.png" alt="Apple logo" srcset="" class="logo-image">Continue with Apple</button>
         </div>
         <hr>  
+        <div class="email-and-password">
 <label for="email">Email or username <br><input type="email" name="email" id="email" placeholder="Email or username"></label>
 <label for="password">Password <br><input type="password" name="password" id="password" placeholder="Password"></label>
+</div>
  <button type="submit" class="easy-log-in-buttons" id="log-in-button"> Log in </button>
  <a href="http://" target="_blank" rel="noopener noreferrer"><p>Forgot your password?</p></a>
  <p>Don't have an account? <a href="http://" target="_blank" rel="noopener noreferrer"><br>Sign up for Spotify</p></a>
